# manage_aiogram

./: .gitignore  Dockerfile  docker-compose.yaml  mest.py  my_account.session  pyproject.toml  requirements.txt  test.py  testolo.tezt
src/: app.py  config_reader.py  main.py
src/db/: models.py
src/filters/: filter.py
src/handlers/: admin.py  client.py  manager.py
src/keyboards/: admin.py  common.py
src/utils/: func.py  states.py
